Fixing settings page when sidenav open on mobile

--- a/UI/Web/src/app/settings/_components/settings/settings.component.scss
+++ b/UI/Web/src/app/settings/_components/settings/settings.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../theme/variables';
+
 h2 {
   color: white;
   font-weight: bold;
@@ -10,5 +12,11 @@ h2 {
 ::ng-deep .content-wrapper:not(.closed) {
   .scale {
     width: calc(100dvw - 200px) !important;
+  }
+}
+
+@media (max-width: $grid-breakpoints-lg) {
+  ::ng-deep .content-wrapper:not(.closed) .scale {
+    width: 100% !important;
   }
 }
